👌fix layout bug

--- a/src/styles/_root.scss
+++ b/src/styles/_root.scss
@@ -19,11 +19,10 @@
 
     // Monthly always uses big
     --body-size-bg: 1.6rem;
-    --body-line-bg: 2.6rem;
+    --body-line: 2.6rem;
     --body-spacing-bg: -0.02rem;
 
     --body-size-sm: 1.4rem;
-    --body-line-sm: 20rem;
     --body-spacing-sm: -0.017rem;
 
 }
